# gke-bazel-demo

./: .bazelrc  .bazelrc.local  .bazelrc.remote  .gitignore  BUILD.bazel  DEVELOPER.md  Jenkinsfile  Makefile  OWNERS  README.md  WORKSPACE  bazel-0.25.0.bazelrc
dev-container/: Dockerfile  Makefile
ingress/: BUILD.bazel  ingress.yaml
java-server/: BUILD.bazel
java-server/src/main/java/hello/: Todo.java  TodoController.java
java-server/src/test/java/hello/: TodoControllerTests.java
java-spring-boot/: BUILD.bazel  dependencies.yaml  pom.xml
java-spring-boot/manifests/: BUILD.bazel  deployment.yaml
java-spring-boot/src/main/java/com/example/: TodoController.java
java-spring-boot/src/test/java/com/example/: BUILD.bazel  TodoControllerTest.java  TodoControllerTests.java
js-client/: BUILD.bazel  angular.json  package-lock.json  package.json  postinstall.tsconfig.json
js-client/e2e/: BUILD.bazel  protractor.on-prepare.js
js-client/e2e/src/: app.e2e-spec.ts  app.po.ts
js-client/manifests/: BUILD.bazel  deployment.yaml
js-client/src/: BUILD.bazel  app-routing.module.ts  app.component.html  app.component.ts  app.module.dev.ts  app.module.ts  index-dev.html  index.html  initialize_testbed.ts  main.dev.ts  main.prod.ts  main.ts  module-id.js  npm-linux.bzl  require.config.js  rxjs_shims.js  tsconfig.json
js-client/src/bazel-demo/: index.html
js-client/src/example/: BUILD.bazel  index.html
js-client/src/hello-world/: BUILD.bazel  hello-world.component.html  hello-world.component.scss  hello-world.component.spec.ts  hello-world.component.ts  hello-world.module.ts
js-client/src/images/: BUILD.bazel
js-client/src/lib/: BUILD.bazel  file.ts
js-client/src/material/: BUILD.bazel  material.module.ts
js-client/src/prod/: index.html
js-client/src/styles/: BUILD.bazel  colors.scss  fonts.scss  main.scss  shared.scss
js-client/src/todos/: BUILD.bazel  todo.ts  todos.component.html  todos.component.scss  todos.component.ts  todos.module.ts  todos.service.ts
manifests/: BUILD.bazel  ingress.yaml
scripts/: common.sh  create-rbe.sh  create.sh  destroy_apps.sh  java-spring-boot-tests.sh  local_vs_remote.sh  planter.sh  teardown.sh  terraform.sh  test.sh  validate.sh
terraform/: main.tf  provider.tf  resources.tf  variables.tf
test/: make.sh  verify_boilerplate.py
tools/: BUILD.bazel
