##

package(default_visibility = ["//visibility:public"])


java_binary(
    name = "ProjectRunner",
    srcs = ["src/main/java/hello/Application.java"],
    main_class = "hello.Application",
    deps = [":todo", ":todo_controller"],
)

java_library(
    name = "todo",
    srcs = ["src/main/java/hello/Todo.java"],
)

java_library(
    name = "todo_controller",
    srcs = ["src/main/java/hello/TodoController.java"],
)

