package(default_visibility = ["//visibility:public"])
# Rules for k8s
load("@k8s_deploy//:defaults.bzl", "k8s_deploy")
load("@io_bazel_rules_k8s//k8s:object.bzl", "k8s_object")
load("@io_bazel_rules_k8s//k8s:objects.bzl", "k8s_objects")

k8s_deploy(
  name = "deploy",
  template = "//js-client/manifests:deployment.yaml",
  images = {
    "js-client:do_not_delete" : "//js-client/src:image",
  },
  cluster = "$(cluster)",
  context = "$(cluster)",
  image_chroot = "$(repo)",
)

k8s_objects(
    name = "k8s",
    objects = [
        ":deploy",
    ],
)


