# Copyright 2018 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     https://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

package(default_visibility = ["//visibility:public"])

alias(
    name = "install",
    actual = "@nodejs//:yarn",
)

# Rules for k8s
load("@k8s_deploy//:defaults.bzl", "k8s_deploy")

k8s_deploy(
    name = "k8s",
    cluster = "$(cluster)",
    image_chroot = "$(repo)",
    images = {
        "js-client:do_not_delete": "//js-client/src:angular_image",
    },
    template = "//js-client/manifests:deployment.yaml",
)
