# The toolchain container used for execution is defined in the target indicated
# Copyright 2018 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     https://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

# by "extra_execution_platforms", "host_platform" and "platforms".
# If you are using your own toolchain container, you need to create a platform
# target with "constraint_values" that allow for the toolchain specified with
# "extra_toolchains" to be selected (given constraints defined in
# "exec_compatible_with").
# More about platforms: https://docs.bazel.build/versions/master/platforms.html
# Note: we are working to remove the need for this custom platform and image
platform(
    name = "rbe_ubuntu1604-angular",
    constraint_values = [
        "@bazel_tools//platforms:x86_64",
        "@bazel_tools//platforms:linux",
        "@bazel_tools//tools/cpp:clang",
        "@bazel_toolchains//constraints:xenial",
    ],
    # RBE team maintains this Docker image for the angular/angular project.
    remote_execution_properties = """
        properties: {
            name: "container-image"
            value:"docker://gcr.io/cloud-marketplace/google/rbe-ubuntu16-04-webtest@sha256:2a3fe7197ef108341d2bb19b4a3047b3456d28d5ca4afcc6dffb56ecca744a30"
        }
        properties: {
            name: "dockerAddCapabilities"
            value: "SYS_ADMIN"
        }
        """,
)
