# Copyright 2018 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     https://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

load("@build_bazel_rules_typescript//:defs.bzl", "ts_library")
load("@angular//:index.bzl", "protractor_web_test_suite")

ts_library(
    name = "e2e",
    testonly = 1,
    srcs = glob(["src/*.ts"]),
    deps = [
        "@npm//@types/jasmine",
        "@npm//jasmine",
        "@npm//protractor",
    ],
)

# The @npm//@angular/bazel npm dependency provides
# the @angular/bazel/protractor-utils
protractor_web_test_suite(
    name = "prodserver_test",
    data = [
        "@npm//@angular/bazel",
        "@npm//protractor",
        "@npm//zone.js",
    ],
    on_prepare = ":protractor.on-prepare.js",
    server = "//js-client/src:prodserver",
    deps = [":e2e"],
)

# The @npm//@angular/bazel npm dependency provides
# the @angular/bazel/protractor-utils
protractor_web_test_suite(
    name = "devserver_test",
    data = [
        "@npm//@angular/bazel",
        "@npm//protractor",
        "@npm//zone.js",
    ],
    on_prepare = ":protractor.on-prepare.js",
    server = "//js-client/src:devserver",
    deps = [":e2e"],
)
